fixed card images (should show proper dimensions on mobile), added img box shadow, updated portfolio gif

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,7 +23,8 @@ body {
   color: red;
 }
 
-a:hover {
+a:hover,
+.custom-control-label:hover {
   cursor: pointer;
 }
 
